--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Metadata
-title: "SirRandoo's Purchase List"
+title: "ViridianMarker's Purchase List"
 favicon: assets/img/favicon.png
-description: A custom version of Toolkit's item list to support all the latest features of Utils.
+description: A list of commands to let you be a hero/villan of ViridianMarker's RimWorld Colony.
 
 baseurl: '/itemlist' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ''
-github_username: 'sirrandoo'
+github_username: 'ViridianMarker'
 
 # Item list settings
 #
